Correct cascade on genre table + DB Initialisation with genre

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,12 @@ spring.datasource.password=0000
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 
 # DDL generation
 spring.jpa.generate-ddl=true
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode=always
+
+# Initialisation DB : Ancienne version de spring
+#spring.datasource.initialization-mode=always
